# ChangeLog for sys-apps/portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1162 2013/01/11 08:33:55 zmedico Exp $

*portage-2.2.0_alpha151 (11 Jan 2013)

  11 Jan 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha151.ebuild,
  -portage-2.2.0_alpha150.ebuild:
  2.2.0_alpha150 version bump. This includes all of the fixes in 2.1.11.40. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.40 (11 Jan 2013)

  11 Jan 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.40.ebuild,
  -portage-2.1.11.39.ebuild:
  2.1.11.40 version bump. This fixes bug #451344 (spawn_nofetch portage
  NameError, a regression in 2.1.11.39 and 2.2.0_alpha150). Bug #445274 tracks
  all bugs fixed since portage-2.1.11.31.

*portage-2.2.0_alpha150 (10 Jan 2013)

  10 Jan 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha150.ebuild:
  2.2.0_alpha150 version bump. This includes all of the fixes in 2.1.11.39. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.39 (10 Jan 2013)

  10 Jan 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.39.ebuild:
  2.1.11.39 version bump. This fixes bug #243192 (update quickpkg man page), bug
  #298298 (include packages from nested package sets in emerge --depclean
  summary), bug #446610 (handle syncfs return value), bug #446662 (add
  QA_CONFIGURE_OPTIONS), bug #448176 (fix emerge --keep-going to avoid dropping
  packages), bug #448858 (relocation error triggered by glibc upgrade), bug
  #449678 (silence repoman warning about usex for EAPI 5), bug #449708 (make
  use() fatal when called with unknown flags in EAPI 5), bug #450278 (add
  QA_AM_MAINTAINER_MODE), bug #450960 (mention relavant file names in autounmask
  messages), and bug #451118 (fix make.conf.5 formatting of compress-index
  docs). Bug #445274 tracks all bugs fixed since portage-2.1.11.31.
