@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1162 2013/01/11 08:33:55 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1163 2013/01/14 17:47:27 zmedico Exp $
+
+  14 Jan 2013; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
+  Add linguas_ru for bug #450372.
 
 *portage-2.2.0_alpha151 (11 Jan 2013)
 
